--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: pl-warranty-crawler
     ports:
       - "3001:3000"
